--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     
     <div class="w-full max-w-md space-y-4">
-        <a href=https://github.com/tabimo/3s_prototype/blob/main/offer_uuid_selector.html" target="_blank" class="w-full flex items-center justify-center px-6 py-4 border border-transparent text-lg font-medium rounded-lg text-white bg-primary hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary shadow-lg transition-all transform hover:scale-105">
+        <a href="offer_uuid_selector.html" target="_blank" class="w-full flex items-center justify-center px-6 py-4 border border-transparent text-lg font-medium rounded-lg text-white bg-primary hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary shadow-lg transition-all transform hover:scale-105">
             <i class="fa fa-tags mr-3"></i>
             <span>Offer UUID选择器</span>
         </a>
