--- a/credit_balance_page.html
+++ b/credit_balance_page.html
@@ -467,7 +467,7 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-neutral-700">王五</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-neutral-700">孙七</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-neutral-700">
-                <span class="px-2 py-1 text-xs rounded-full bg-blue-100 text-blue-800">预付</span>
+                <span class="px-2 py-1 text-xs rounded-full bg-blue-100 text-blue-800">后付</span>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-neutral-700">2025-08-11 16:20</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm">
